@@ -1,3 +1,10 @@
+2004-05-01 [christoph]
+
+	* src/maildir.c
+		o scan new and cur folders when scanning the folder and searching
+		  for a message
+		o rename files on flag changes
+
 2004-04-28 [christoph]
 
 	* configure.ac
